automatically install tpm if not present

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,6 +30,8 @@ set -g @easy-motion-prefix "s"
 bind-key v next-layout
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 run '~/.tmux/plugins/tpm/tpm'
 
 
