--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,3 +1,5 @@
+#ATTENTION: Waybar only works on Tumbleweed if removing "xdg-desktop-portal-gtk"
+
 # Default config for sway
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
@@ -12,7 +14,7 @@ exec wl-paste -p -t text --watch wl-copy
 #kanshi must run as a service: systemctl --user enable kanshi.service
 exec_always pkill kanshi; exec kanshi
 
-swaymsg 'input * xkb_options compose:ralt'
+#swaymsg 'input * xkb_options compose:ralt'
 # Primary clipboard
 #exec wl-paste -p -t text --watch /home/julian/go/bin/cliphist store -P
 ### Variables
@@ -210,20 +212,9 @@ bindsym $mod+r mode "resize"
 #
 # Status Bar:
 #
-# Read `man 5 sway-bar` for more information about this section.
 bar {
     swaybar_command waybar
-    #position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    #status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
-
-    # colors {
-    #     statusline #ffffff
-    #     background #323232
-    #     inactive_workspace #32323200 #32323200 #5c5c5c
-    # }
+    position top
 }
 
 
