sway: switch to wofi
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,5 +1,4 @@
 #ATTENTION: Waybar only works on Tumbleweed if removing "xdg-desktop-portal-gtk"
-# Also install "dmenu" that the menu works
 # Add GTK_THEME=Adwaita-dark to /etc/environment to have dark mode for FF, ...
 
 # Default config for sway
@@ -33,7 +32,6 @@ set $term foot
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu dmenu_path | dmenu | xargs swaymsg exec --
 
 ### Output configuration
 #
@@ -84,7 +82,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+Shift+q kill
 
     # Start your launcher
-    bindsym $mod+d exec $menu
+    #bindsym $mod+d exec $menu
+    bindsym $mod+d exec wofi --show=drun
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
