--- a/.config/sway/config
+++ b/.config/sway/config
@@ -244,3 +244,9 @@ bindsym --locked XF86MonBrightnessDown exec brightnessctl s 5%-
 
 set $XDG_CURRENT_DESKTOP "${XDG_CURRENT_DESKTOP:-sway}"
 set $MOZ_ENABLE_WAYLAND 1
+
+# Notification Daemon
+exec swaync
+
+# Toggle control center
+bindsym $mod+Shift+n exec swaync-client -t -sw
