--- a/.config/sway/config
+++ b/.config/sway/config
@@ -9,6 +9,23 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+#========================#
+# Appearance and Theming #
+#========================#
+# Declare Colors:
+set $background #332b2b
+set $color_urgent #fb4934
+set $text_color #ffffff
+set $title_bg_unfocused #3c3836
+set $title_outline_active #928372
+set $title_outline_unfocused #332b2b
+
+# Set Colors:           Border                   Background          Text          Indicator             Child Border
+client.background       $background
+client.focused          $title_outline_active    $background         $text_color   $title_outline_active $title_outline_active
+client.focused_inactive $title_outline_unfocused $background         $text_color   $text_color           $title_outline_unfocused
+client.unfocused        $title_outline_unfocused $title_bg_unfocused $text_color   $title_outline_active
+client.urgent           $color_urgent            $color_urgent       $color_urgent $color_urgent         $color_urgent
 #exec copyq
 # Regular clipboard
 #exec wl-paste -t text --watch /home/julian/go/bin/cliphist store
