--- a/.config/sway/config
+++ b/.config/sway/config
@@ -240,10 +240,10 @@ bar {
 
 bindsym $mod+Shift+v exec copyq toggle
 bindsym $mod+o exec killall -SIGUSR1 waybar
-default_border pixel 2
 for_window [app_id="copyq"] floating enable, sticky enable, resize set height 600px width 550px, move position cursor, move down 330
 assign [app_id="firefox"] 2
 for_window [app_id="firefox"] focus
+for_window [class="Slack"] move window to workspace 3
 bindsym Alt+tab workspace next_on_output
 #bindsym Alt+tab workspace back_and_forth
 exec swayidle -w \
@@ -267,3 +267,5 @@ exec swaync
 
 # Toggle control center
 bindsym $mod+Shift+n exec swaync-client -t -sw
+
+default_border pixel 2
