--- a/.config/sway/config
+++ b/.config/sway/config
@@ -246,10 +246,11 @@ for_window [app_id="firefox"] focus
 for_window [class="Slack"] move window to workspace 3
 bindsym Alt+tab workspace next_on_output
 #bindsym Alt+tab workspace back_and_forth
-exec swayidle -w \
-  timeout 120 'swaylock -f -c 000000' \
-  timeout 10800 'systemctl suspend' \
-
+#move this block in ~/.config/sway/sway_system_specific
+# exec swayidle -w \
+#   timeout 120 'swaylock -f -c 000000' \
+#   timeout 10800 'systemctl suspend' \
+#
 #timeout 100 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
 #before-sleep 'swaylock -f -c 000000'
 
@@ -269,3 +270,5 @@ exec swaync
 bindsym $mod+Shift+n exec swaync-client -t -sw
 
 default_border pixel 2
+
+include ~/.config/sway/sway_system_specific
