sway: add mod shift s for locking
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -238,6 +238,7 @@ bar {
 }
 
 
+bindsym $mod+Shift+s exec swaylock -f -c 000000
 bindsym $mod+Shift+v exec copyq toggle
 bindsym $mod+o exec killall -SIGUSR1 waybar
 for_window [app_id="copyq"] floating enable, sticky enable, resize set height 600px width 550px, move position cursor, move down 330
