--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,7 +28,11 @@ set -g @plugin 'IngoMeyer441/tmux-easy-motion'
 set -g @easy-motion-prefix "s"
 
 bind-key v next-layout
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind p paste-buffer
+bind Escape copy-mode
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
