--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,58 +1,76 @@
 [aws]
+disabled = true
 format = '\[[$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
 
 [bun]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [c]
+disabled = true
 format = '\[[$symbol($version(-$name))]($style)\]'
 
 [cmake]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [cmd_duration]
+disabled = true
 format = '\[[⏱ $duration]($style)\]'
 
 [cobol]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [conda]
+disabled = true
 format = '\[[$symbol$environment]($style)\]'
 
 [crystal]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [daml]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [dart]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [deno]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [docker_context]
 format = '\[[$symbol$context]($style)\]'
 
 [dotnet]
+disabled = true
 format = '\[[$symbol($version)(🎯 $tfm)]($style)\]'
 
 [elixir]
+disabled = true
 format = '\[[$symbol($version \(OTP $otp_version\))]($style)\]'
 
 [elm]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [erlang]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [fennel]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [fossil_branch]
+disabled = true
 format = '\[[$symbol$branch]($style)\]'
 
 [gcloud]
+disabled = true
 format = '\[[$symbol$account(@$domain)(\($region\))]($style)\]'
 
 [git_branch]
@@ -62,24 +80,31 @@ format = '\[[$symbol$branch]($style)\]'
 format = '([\[$all_status$ahead_behind\]]($style))'
 
 [golang]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [gradle]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [guix_shell]
+disabled = true
 format = '\[[$symbol]($style)\]'
 
 [haskell]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [haxe]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [helm]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [hg_branch]
+disabled = true
 format = '\[[$symbol$branch]($style)\]'
 
 [hostname]
@@ -88,18 +113,22 @@ format = '\[[$hostname]($style)\] '
 disabled = false
 
 [java]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [julia]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [kotlin]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [kubernetes]
 format = '\[[$symbol$context( \($namespace\))]($style)\]'
 
 [lua]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [memory_usage]
@@ -109,18 +138,23 @@ format = '\[$symbol[$ram( | $swap)]($style)\]'
 format = '\[[$symbol$project]($style)\]'
 
 [nim]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [nix_shell]
+disabled = true
 format = '\[[$symbol$state( \($name\))]($style)\]'
 
 [nodejs]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [ocaml]
+disabled = true
 format = '\[[$symbol($version)(\($switch_indicator$switch_name\))]($style)\]'
 
 [opa]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [openstack]
@@ -133,48 +167,61 @@ format = '\[[$symbol]($style)\]'
 format = '\[[$symbol$version]($style)\]'
 
 [perl]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [php]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [pijul_channel]
 format = '\[[$symbol$channel]($style)\]'
 
 [pulumi]
+disabled = true
 format = '\[[$symbol$stack]($style)\]'
 
 [purescript]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [python]
+disabled = true
 format = '\[[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)\]'
 
 [raku]
+disabled = true
 format = '\[[$symbol($version-$vm_version)]($style)\]'
 
 [red]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [ruby]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [rust]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [scala]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [spack]
+disabled = true
 format = '\[[$symbol$environment]($style)\]'
 
 [sudo]
 format = '\[[as $symbol]($style)\]'
 
 [swift]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [terraform]
+disabled = true
 format = '\[[$symbol$workspace]($style)\]'
 
 [time]
@@ -184,10 +231,13 @@ format = '\[[$time]($style)\]'
 format = '\[[$user]($style)\]'
 
 [vagrant]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [vlang]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
 
 [zig]
+disabled = true
 format = '\[[$symbol($version)]($style)\]'
