kanshi: update config
Signed-off-by: Julian Ruess <julianr@linux.ibm.com>

--- a/.config/kanshi/config
+++ b/.config/kanshi/config
@@ -1,8 +1,19 @@
 profile {
 	output eDP-1 disable
+	output DP-2 enable
+}
+profile {
+	output eDP-1 disable
+	output DP-3 enable
+}
+profile {
+	output eDP-1 disable
+	output DP-4 enable
+}
+profile {
+	output eDP-1 disable
 	output DP-5 enable
 }
-
 profile {
 	output eDP-1 enable
 }
