--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -12,9 +12,9 @@
 			"sway/mode",
 ],
 
-"modules-center": [
-			"sway/window",
-],
+//"modules-center": [
+//			"sway/window",
+//],
 
 "modules-right": [
 			"tray",
