--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,8 +24,8 @@ set -g status-fg white
 set-window-option -g window-status-current-style bg=white
 set-window-option -g window-status-current-style fg=colour135
 
-set -g @plugin 'IngoMeyer441/tmux-easy-motion'
-set -g @easy-motion-prefix "s"
+set -g @plugin 'schasse/tmux-jump'
+set -g @jump-key 's'
 
 bind-key v next-layout
 bind -T copy-mode-vi v send -X begin-selection
