--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -136,12 +136,11 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, return, exec, $terminal
+bind = $mainMod SHIFT, q, killactive,
+bind = $mainMod SHIFT, e, exit,
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, d, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 
@@ -155,6 +154,11 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+bind = $mainMod SHIFT, h, swapwindow, l
+bind = $mainMod SHIFT, l, swapwindow, r
+bind = $mainMod SHIFT, k, swapwindow, u
+bind = $mainMod SHIFT, j, swapwindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
