--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -196,7 +196,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Idle Daemon
 exec-once=swayidle -w timeout 880 'swaylock -f -c 000000'
