sway: add description for dark mode
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -10,6 +10,8 @@
 #   timeout 120 'swaylock -f -c 000000' \
 #   timeout 10800 'systemctl suspend' \
 
+# dark mode for sway:
+# gtk3/gtk4: add GTK_THEME=Adwaita-dark to /etc/environment
 
 
 # Default config for sway
