--- a/.config/sway/config
+++ b/.config/sway/config
@@ -214,6 +214,7 @@ for_window [app_id="copyq"] floating enable, sticky enable, resize set height 60
 
 for_window [app_id="foot_nmtui"] floating enable, sticky enable, resize set 1000px 700px, move position cursor
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindsym --locked XF86MonBrightnessUp exec brightnessctl s +5%
