--- a/.config/sway/config
+++ b/.config/sway/config
@@ -134,6 +134,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+    bindsym Alt+tab workspace back_and_forth
 #
 # Layout stuff:
 #
