kitty: add custom hints
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,3 +22,6 @@ color6                #89b482
 color14               #89b482
 color7                #d4be98
 color15               #d4be98
+
+action_alias myhints kitten hints --program @
+map ctrl+shift+space myhints --customize-processing ~/.config/kitty/custom-hints.py
