--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -30,9 +30,9 @@ y = 0
 ## sha
 #'[0-9a-f]{7,40}',
 ## ip
-#'\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}',
+#'[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}',
 ## ipv6
-#'[A-f0-9:]+:+[A-f0-9:]+[%\w\d]+',
+#'[A-f0-9:]+:+[A-f0-9:]+[%\w[0-9]]+',
 ## address
 #'0x[0-9a-fA-F]+',
 ## number
@@ -45,5 +45,4 @@ hyperlinks = true
 mouse.mods = "None"
 persist = false
 post_processing = true
-regex = "([0-9]{4,}|0x[0-9a-fA-F]+|[A-f0-9:]+:+[A-f0-9:]+[%[A-Za-z0-9_][0-9]]+|ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩‘]+"
-
+regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+|sha256:([0-9a-f]{64})|[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}|[A-f0-9:]+:+[A-f0-9:]+[%[A-Za-z0-9_][0-9]]+|0x[0-9a-fA-F]+|[0-9]{4,}"
