--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,3 +1,10 @@
+[font]
+size = 10.0
+
+[font.normal]
+family = "BlexMono Nerd Font"
+style = "Regular"
+
 [font.offset]
 x = 0
 y = 1
@@ -8,6 +15,33 @@ decorations = "None"
 [window.padding]
 x = 0
 y = 0
+
+# Default colors
+[colors.primary]
+background = '#282828'
+foreground = '#d4be98'
+
+# Normal colors
+[colors.normal]
+black   = '#3c3836'
+red     = '#ea6962'
+green   = '#a9b665'
+yellow  = '#d8a657'
+blue    = '#7daea3'
+magenta = '#d3869b'
+cyan    = '#89b482'
+white   = '#d4be98'
+
+# Bright colors
+[colors.bright]
+black   = '#3c3836'
+red     = '#ea6962'
+green   = '#a9b665'
+yellow  = '#d8a657'
+blue    = '#7daea3'
+magenta = '#d3869b'
+cyan    = '#89b482'
+white   = '#d4be98'
 
 ##markdown_url
 ##'\[[^]]*\]\(([^)]+)\)',
