--- a/.config/i3/config
+++ b/.config/i3/config
@@ -188,7 +188,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status | ~/.config/i3status/i3status-wrapper.py
 }
 
 # Lock Screen
