--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,6 +13,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+monitor=eDP-1,1920x1080@60,0x0,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
