hyprland: change terminal to alacritty and border color orange
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec-once = waybar
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = foot
+$terminal = alacritty
 $fileManager = thunar
 $menu = wofi --show drun
 
@@ -56,7 +56,7 @@ general {
     gaps_in = 2
     gaps_out = 0
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgb(fe8019) rgb(d65d0e) 45deg
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -105,7 +105,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #new_is_master = true
 }
 
 gestures {
