i3: add no-startup-id
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -192,7 +192,7 @@ bar {
 }
 
 # Lock Screen
-bindsym $mod+Shift+s exec ~/.config/i3/screenlock
+bindsym $mod+Shift+s exec --no-startup-id ~/.config/i3/screenlock
 
 for_window [class="^.*"] border pixel 1
 
