hyprland: move screenlock to x
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -198,7 +198,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 #exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-bind = $mainMod SHIFT, s, exec, ~/.config/hypr/screenlock
+bind = $mainMod SHIFT, x, exec, ~/.config/hypr/screenlock
 
 # Idle Daemon
 exec-once=swayidle -w timeout 880 'swaylock -f -c 000000'
