--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -186,8 +186,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+#bind = $mainMod, S, togglespecialworkspace, magic
+#bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -198,7 +198,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 #exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-bind = $mainMod SHIFT, x, exec, ~/.config/hypr/screenlock
+bind = $mainMod SHIFT, s, exec, ~/.config/hypr/screenlock
 
 # Idle Daemon
 exec-once=swayidle -w timeout 880 'swaylock -f -c 000000'
