--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -200,5 +200,10 @@ bindm = $mainMod, mouse:273, resizewindow
 #exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 bind = $mainMod SHIFT, s, exec, ~/.config/hypr/screenlock
 
+binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+binde=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+binde=, XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
 # Idle Daemon
 exec-once=swayidle -w timeout 880 'swaylock -f -c 000000'
