hyprland: lock after 15 minutes
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -206,4 +206,4 @@ binde=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 binde=, XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Idle Daemon
-exec-once=swayidle -w timeout 880 'swaylock -f -c 000000'
+exec-once=swayidle -w timeout 880 'swaylock -f -c 000000' timeout 890 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
