--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -201,6 +201,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 #exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 bind = $mainMod SHIFT, s, exec, ~/.config/hypr/screenlock
+bind = $mainMod SHIFT, x, exec, systemctl suspend
 
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
