--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,8 +12,9 @@
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-monitor=eDP-1,1920x1080@60,0x0,1
+# ATTENTION: bitdepth 10 required for screen sharing WTF
+monitor=,preferred,auto,auto,bitdepth,10
+monitor=eDP-1,1920x1080@60,0x0,1,bitdepth,10
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -199,7 +200,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
 bind = $mainMod SHIFT, s, exec, ~/.config/hypr/screenlock
 bind = $mainMod SHIFT, x, exec, systemctl suspend
 
