--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -54,11 +54,11 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 2
+    gaps_in = 0
     gaps_out = 0
     border_size = 1
     col.active_border = rgb(fe8019) rgb(d65d0e) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgb(7c6f64)
 
     layout = dwindle
 
