--- a/.config/i3/config
+++ b/.config/i3/config
@@ -59,7 +59,7 @@ bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+Shift+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -94,13 +94,13 @@ bindsym $mod+Shift+Right move right
 bindsym $mod+b split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+#bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+#bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+#bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -131,11 +131,17 @@ set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
+bindsym $mod+x workspace number $ws1
 bindsym $mod+2 workspace number $ws2
+bindsym $mod+c workspace number $ws2
 bindsym $mod+3 workspace number $ws3
+bindsym $mod+v workspace number $ws3
 bindsym $mod+4 workspace number $ws4
+bindsym $mod+s workspace number $ws4
 bindsym $mod+5 workspace number $ws5
+bindsym $mod+d workspace number $ws5
 bindsym $mod+6 workspace number $ws6
+bindsym $mod+f workspace number $ws6
 bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
