i3: include system specific
Signed-off-by: Julian Ruess <julianr@linux.ibm.com>

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -212,3 +212,5 @@ exec --no-startup-id dunst
 exec --no-startup-id picom -b
 
 exec --no-startup-id xautolock -corners '00--' -time 15 -locker 'i3lock -c 000000 | xset dpms force off' &
+
+include ~/.config/i3/i3_system_specific
