tmux: add numblock and start at 1
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,10 +4,27 @@ set -ga terminal-overrides ",*256col*:Tc"
 set-option -g mouse on
 set-option -g focus-events on
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind x select-window -t 1
+bind c select-window -t 2
+bind v select-window -t 3
+bind s select-window -t 4
+bind d select-window -t 5
+bind f select-window -t 6
+bind w select-window -t 7
+bind e select-window -t 8
+bind r select-window -t 9
+
+bind u new-window
+bind i kill-pane
 
 setw -g mode-keys vi
 
