tmux: numblock right
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,18 +13,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind x select-window -t 1
-bind c select-window -t 2
-bind v select-window -t 3
-bind s select-window -t 4
-bind d select-window -t 5
-bind f select-window -t 6
-bind w select-window -t 7
-bind e select-window -t 8
-bind r select-window -t 9
-
-bind u new-window
-bind i kill-pane
+bind m select-window -t 1
+bind , select-window -t 2
+bind . select-window -t 3
+bind u select-window -t 4
+bind i select-window -t 5
+bind o select-window -t 6
+bind y select-window -t 7
+bind n select-window -t 8
+bind p select-window -t 9
 
 setw -g mode-keys vi
 
