--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -49,6 +49,7 @@ white   = '#d4be98'
 # map ctrl + semicolon to ctrl + b
 bindings = [
 { key = "Semicolon", mods = "Control", chars = "\u0002" },
+{ key = "Ö", mods = "Control", chars = "\u0002" },
 ]
 ##markdown_url
 ##'\[[^]]*\]\(([^)]+)\)',
