--- a/.config/i3/config
+++ b/.config/i3/config
@@ -207,6 +207,8 @@ bindsym $mod+Shift+s exec --no-startup-id ~/.config/i3/screenlock
 #Suspend
 bindsym $mod+Shift+x exec --no-startup-id systemctl suspend
 
+exec --no-startup-id setxkbmap -option caps:super
+
 bindsym Print exec maim -s -u | xclip -selection clipboard -t image/png -i
 
 for_window [class="^.*"] border pixel 1
