--- a/.config/i3/config
+++ b/.config/i3/config
@@ -134,20 +134,23 @@ set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
-bindsym $mod+x workspace number $ws1
+bindsym $mod+m workspace number $ws1
 bindsym $mod+2 workspace number $ws2
-bindsym $mod+c workspace number $ws2
+bindsym $mod+comma workspace number $ws2
 bindsym $mod+3 workspace number $ws3
-bindsym $mod+v workspace number $ws3
+bindsym $mod+period workspace number $ws3
 bindsym $mod+4 workspace number $ws4
-bindsym $mod+s workspace number $ws4
+bindsym $mod+u workspace number $ws4
 bindsym $mod+5 workspace number $ws5
-bindsym $mod+d workspace number $ws5
+bindsym $mod+i workspace number $ws5
 bindsym $mod+6 workspace number $ws6
-bindsym $mod+f workspace number $ws6
+bindsym $mod+o workspace number $ws6
 bindsym $mod+7 workspace number $ws7
+bindsym $mod+y workspace number $ws7
 bindsym $mod+8 workspace number $ws8
+bindsym $mod+n workspace number $ws8
 bindsym $mod+9 workspace number $ws9
+bindsym $mod+p workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
