--- a/.config/i3/config
+++ b/.config/i3/config
@@ -114,7 +114,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+#bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -144,7 +144,8 @@ bindsym $mod+u workspace number $ws4
 bindsym $mod+5 workspace number $ws5
 bindsym $mod+i workspace number $ws5
 bindsym $mod+6 workspace number $ws6
-bindsym $mod+o workspace number $ws6
+#mod + o is tmux key
+#bindsym $mod+o workspace number $ws6
 bindsym $mod+7 workspace number $ws7
 bindsym $mod+y workspace number $ws7
 bindsym $mod+8 workspace number $ws8
@@ -165,6 +166,27 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+bindsym --release $mod+semicolon exec --no-startup-id xdotool key --clearmodifiers Escape
+bindsym --release $mod+o exec --no-startup-id xdotool key --clearmodifiers Ctrl+b
+# Arrow mode
+set $arrow Arrow Mode Active
+mode "$arrow" {
+#         # vim keybindings (hjkl = left, down, up, right)
+	bindsym --release h exec --no-startup-id xdotool key --clearmodifiers Left
+	bindsym --release j exec --no-startup-id xdotool key --clearmodifiers Down
+	bindsym --release k exec --no-startup-id xdotool key --clearmodifiers Up
+	bindsym --release l exec --no-startup-id xdotool key --clearmodifiers Right
+#         bindsym h exec xdotool key Left
+#         bindsym j exec xdotool key Down
+#         bindsym k exec xdotool key Up
+#         bindsym l exec xdotool key Right
+#
+#         # back to normal: Enter or Escape
+        bindsym Return mode "default"
+	bindsym Escape mode "default"
+	bindsym --release $mod+semicolon exec --no-startup-id xdotool key --clearmodifiers Escape
+}
+bindsym $mod+a mode "$arrow"
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -218,5 +240,6 @@ for_window [class="^.*"] border pixel 1
 
 exec --no-startup-id dunst
 exec --no-startup-id picom -b
+exec --no-startup-id ydotoold
 
 include ~/.config/i3/i3_system_specific
