--- a/.config/i3/config
+++ b/.config/i3/config
@@ -184,7 +184,7 @@ mode "$arrow" {
 #         # back to normal: Enter or Escape
         bindsym Return mode "default"
 	bindsym Escape mode "default"
-	bindsym --release $mod+semicolon exec --no-startup-id xdotool key --clearmodifiers Escape
+	bindsym --release Mod4+semicolon exec --no-startup-id xdotool key --clearmodifiers Escape
 }
 bindsym $mod+a mode "$arrow"
 # reload the configuration file
