--- a/.config/i3/config
+++ b/.config/i3/config
@@ -151,7 +151,8 @@ bindsym $mod+y workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+n workspace number $ws8
 bindsym $mod+9 workspace number $ws9
-bindsym $mod+p workspace number $ws9
+#mod +p is ctrl+c
+#bindsym $mod+p workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
@@ -168,6 +169,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 bindsym --release $mod+semicolon exec --no-startup-id xdotool key --clearmodifiers Escape
 bindsym --release $mod+o exec --no-startup-id xdotool key --clearmodifiers Ctrl+b
+bindsym --release $mod+p exec --no-startup-id xdotool key --clearmodifiers Ctrl+c
 # Arrow mode
 set $arrow Arrow Mode Active
 mode "$arrow" {
