--- a/.config/i3/config
+++ b/.config/i3/config
@@ -99,7 +99,7 @@ bindsym $mod+Shift+Right move right
 bindsym $mod+b split h
 
 # split in vertical orientation
-#bindsym $mod+v split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 #bindsym $mod+f fullscreen toggle
