--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,6 +24,9 @@ bind n select-window -t 8
 bind p select-window -t 9
 
 setw -g mode-keys vi
+bind \; copy-mode
+bind -T copy-mode-vi m send-keys -X page-down
+bind -T copy-mode-vi , send-keys -X page-up
 
 set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION DISPLAY"
 
