--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,6 +28,13 @@ bind \; copy-mode
 bind -T copy-mode-vi m send-keys -X page-down
 bind -T copy-mode-vi , send-keys -X page-up
 
+# Codes from Alacritty
+unbind %
+bind -n \uE000 copy-mode \; send-keys -X page-down
+bind -n \uE001 copy-mode \; send-keys -X page-up
+bind -n \uE002 copy-mode \; send-keys -X page-down
+bind -n \uE003 copy-mode \; send-keys -X page-up
+
 set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION DISPLAY"
 
 
