--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,6 +33,7 @@ bind -n \uE000 copy-mode \; send-keys -X page-down
 bind -n \uE001 copy-mode \; send-keys -X page-up
 bind -n \uE002 copy-mode \; send-keys -X page-down
 bind -n \uE003 copy-mode \; send-keys -X page-up
+bind -n \uE004 copy-mode
 
 set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION DISPLAY"
 
