tmux/ssh: fix agent forwarding
Signed-off-by: Julian Ruess <julianr@linux.ibm.com>

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,8 +35,11 @@ bind -n \uE002 copy-mode \; send-keys -X page-down
 bind -n \uE003 copy-mode \; send-keys -X page-up
 bind -n \uE004 copy-mode
 
-set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION DISPLAY"
-
+# Fix SSH agent forwarding
+# This works together with $HOME/.ssh/rc
+set-option -g update-environment "DISPLAY KRB5CCNAME SSH_ASKPASS \
+SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set-environment -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
 # Clipboard
 set-option -s set-clipboard on
