--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,9 +37,9 @@ bind -n \uE004 copy-mode
 
 # Fix SSH agent forwarding
 # This works together with $HOME/.ssh/rc
-set-option -g update-environment "DISPLAY KRB5CCNAME SSH_ASKPASS \
+#set-option -g update-environment "DISPLAY KRB5CCNAME SSH_ASKPASS \
 SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
-set-environment -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+#set-environment -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
 # Clipboard
 set-option -s set-clipboard on
