ssh: add comments to config
Signed-off-by: Julian Ruess <julianr@linux.ibm.com>

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,10 +1,16 @@
 Host *
-     ControlMaster auto
-     ControlPath ~/.ssh/master-%r@%h:%p
-     ControlPersist 1s
-     IdentityAgent ~/.ssh/ssh_auth_sock
-     ServerAliveInterval 60
-     AddKeysToAgent yes
-     ForwardAgent yes
+	# Fixes SSH agent forwarding
+	# To use e.g. port forwarding with the same machine,
+	# a new connection must be enfored. E.g. with 'ssh -S none ...'
+	# This works togehter with code in .zshrc
+	ControlMaster auto
+	ControlPath ~/.ssh/master-%r@%h:%p
+	ControlPersist 1s
+	# Wins against SSH_AUTH_SOCK environment variable
+	IdentityAgent ~/.ssh/ssh_auth_sock
+
+	ServerAliveInterval 60
+	AddKeysToAgent yes
+	ForwardAgent yes
 
 Include configsystemspecific
