alacritty: move to catppuccin
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,3 +1,7 @@
+general.import = [
+   "~/.config/alacritty/catppuccin-mocha.toml"
+]
+
 [env]
 WINIT_X11_SCALE_FACTOR = "1.0"
 
@@ -24,32 +28,32 @@ dynamic_padding = true
 x = 0
 y = 0
 
-# Default colors
-[colors.primary]
-background = '#282828'
-foreground = '#d4be98'
-
-# Normal colors
-[colors.normal]
-black   = '#3c3836'
-red     = '#ea6962'
-green   = '#a9b665'
-yellow  = '#d8a657'
-blue    = '#7daea3'
-magenta = '#d3869b'
-cyan    = '#89b482'
-white   = '#d4be98'
-
-# Bright colors
-[colors.bright]
-black   = '#3c3836'
-red     = '#ea6962'
-green   = '#a9b665'
-yellow  = '#d8a657'
-blue    = '#7daea3'
-magenta = '#d3869b'
-cyan    = '#89b482'
-white   = '#d4be98'
+# # Default colors
+# [colors.primary]
+# background = '#282828'
+# foreground = '#d4be98'
+#
+# # Normal colors
+# [colors.normal]
+# black   = '#3c3836'
+# red     = '#ea6962'
+# green   = '#a9b665'
+# yellow  = '#d8a657'
+# blue    = '#7daea3'
+# magenta = '#d3869b'
+# cyan    = '#89b482'
+# white   = '#d4be98'
+#
+# # Bright colors
+# [colors.bright]
+# black   = '#3c3836'
+# red     = '#ea6962'
+# green   = '#a9b665'
+# yellow  = '#d8a657'
+# blue    = '#7daea3'
+# magenta = '#d3869b'
+# cyan    = '#89b482'
+# white   = '#d4be98'
 
 [keyboard]
 bindings = [
