--- a/.config/sway/config
+++ b/.config/sway/config
@@ -20,23 +20,16 @@
 #
 # Read `man 5 sway` for a complete reference.
 
-#========================#
-# Appearance and Theming #
-#========================#
-# Declare Colors:
-set $background #332b2b
-set $color_urgent #fb4934
-set $text_color #ffffff
-set $title_bg_unfocused #3c3836
-set $title_outline_active #928372
-set $title_outline_unfocused #332b2b
+include catppuccin-mocha
 
-# Set Colors:           /order                   Background          Text          Indicator             Child Border
-client.background       $background
-client.focused          $title_outline_active    $background         $text_color   $title_outline_active $title_outline_active
-client.focused_inactive $title_outline_unfocused $background         $text_color   $text_color           $title_outline_unfocused
-client.unfocused        $title_outline_unfocused $title_bg_unfocused $text_color   $title_outline_active
-client.urgent           $color_urgent            $color_urgent       $color_urgent $color_urgent         $color_urgent
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
+
 
 #unify both linux clipboards
 exec wl-paste -p -t text --watch wl-copy
