--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 set -sg escape-time 0
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -g mouse on
 set-option -g focus-events on
 
