--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,11 +45,11 @@ SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set-option -s set-clipboard on
 set -g allow-passthrough on
 
-# Colors
+# Colors - catppuccin mocha
 set-option -g status-style bg=default
-set -g status-fg white
-set-window-option -g window-status-current-style bg=white
-set-window-option -g window-status-current-style fg=colour135
+set -g status-fg "#cdd6f4"
+set-window-option -g window-status-current-style bg=#cdd6f4
+set-window-option -g window-status-current-style fg=#cba6f7
 
 set -g @plugin 'schasse/tmux-jump'
 set -g @jump-key 's'
