--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,6 +50,7 @@ set-option -g status-style bg=default
 set -g status-fg "#cdd6f4"
 set-window-option -g window-status-current-style bg=#cdd6f4
 set-window-option -g window-status-current-style fg=#cba6f7
+set -g pane-active-border-style 'fg=#fab387'
 
 set -g @plugin 'schasse/tmux-jump'
 set -g @jump-key 's'
